# q-is

./: .gitignore  CMakeLists.txt  QISWidget.cpp  QISWidget.hpp  README.md  TabbedResultWidget.cpp  TabbedResultWidget.h  TabbedResultWidget.hpp  main.cpp  qis_widget.cpp  qis_widget.hpp
